--- a/css/estilos1.css
+++ b/css/estilos1.css
@@ -6,12 +6,55 @@ body{
 header{
     background-color: #5b7989;
 }
+@-webkit-keyframes movimiento{
+    0%{
+        transform: rotate(none);
+    }
+    33%{
+        transform: rotate(-2deg);
+    }
+    66%{
+        transform: rotate(2deg);
+    }
+    100%{
+        transform: rotate(none);
+    }
+}
+@-webkit-keyframes  movimiento2{
+    0%{
+        position: relative;
+        left: 2px;
+        bottom: 1px;
+    }
+    20%{
+        position: relative;
+        left: 4px;
+        bottom: 2px;
+    }
+    40%{
+        position: relative;
+        left: 6px;
+        bottom: 3px;
+    }
+    60%{
+        position: relative;
+        left: 4px;
+        bottom: 2px;
+    }
+    80%{
+        position: relative;
+        left: 2px;
+        bottom: 1px;
+    }
+    100%{
+        position: relative;
+        left: 0px;
+        bottom: 0px;
+    }
+}
 
 @media (min-width:900px){
     body{
-        max-width: 900px;
-        margin-left: auto;
-        margin-right: auto;
         max-width: 900px;
         margin-left: auto;
         margin-right: auto;
@@ -49,62 +92,60 @@ header{
     header nav a:hover{
         text-decoration: overline;
     }
-    
-    @-webkit-keyframes movimiento{
-        0%{
-            transform: rotate(none);
-        }
-        33%{
-            transform: rotate(-2deg);
-        }
-        66%{
-            transform: rotate(2deg)
-        }
-        100%{
-            transform: rotate(none);
-        }
-    }
     #secundario .imagen1 img:hover{
         animation-name: movimiento;
         animation-duration: 2s;
     }
-    @-webkit-keyframes  movimiento2{
-        0%{
-            position: relative;
-            left: 2px;
-            bottom: 1px;
-        }
-        20%{
-            position: relative;
-            left: 4px;
-            bottom: 2px;
-        }
-        40%{
-            position: relative;
-            left: 6px;
-            bottom: 3px;
-        }
-        60%{
-            position: relative;
-            left: 4px;
-            bottom: 2px;
-        }
-        80%{
-            position: relative;
-            left: 2px;
-            bottom: 1px;
-        }
-        100%{
-            position: relative;
-            left: 0px;
-            bottom: 0px;
-        }
-    }
+    
     #secundario .imagen2 img:hover{
         animation-name: movimiento2;
         animation-duration: 1s;
     }
 }
 @media (max-width:899px){
+    body{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #principal{
+        padding: 20px 30px 20px 30px;
+        background-color: #82c3a6;
+    }
+    #principal img{
+        width: 100%;
+    }
+    #secundario{
+        background-color: #d5c75f;
+    }
+    #secundario div{
+        padding: 20px 30px 20px 30px;
+    }
+    #secundario img{
+        width: 100%;
+    }
+    .imagen1 img,.imagen2 img{
+        border: 1px solid black;
+    }
+    #secundario p{
+        text-decoration: underline;
+        margin: 0px;
+        text-align: center;
+        color: black;
+        font-size: 20px;
+    }
+    #principal img,#secundario img{
+        box-shadow: 2px 2px 2px #02010a;}
+    header nav a:hover{
+        text-decoration: overline;
+    }
+    #secundario .imagen1 img:hover{
+        animation-name: movimiento;
+        animation-duration: 2s;
+    }
     
+    #secundario .imagen2 img:hover{
+        animation-name: movimiento2;
+        animation-duration: 1s;
+    }
 }
