--- a/css/cabezaPie.css
+++ b/css/cabezaPie.css
@@ -1,11 +1,7 @@
-@media (min-width:900px){
-    /*----------Estilos para el encabezado de la pagina----------*/
-    header{
+header{
         padding: 20px;
-        display: flex;
     }
     #menu{
-        text-align: right;
         margin-top: 30px;
     }
     #menu a{
@@ -23,25 +19,61 @@
     /*---------estilos para el pie de la pagina---------*/
     footer{
         color: black;
-        display: flex;
         background-color: #C6d5c5;
-        padding: 20px;
     }
-    #columna3 nav a{
+    footer a{
+        text-decoration: none;
+        color: black;
+    }
+#columna3 nav a{
         display: -webkit-flex;
 	    display: flex;
 	    -webkit-flex-flow: row wrap;
 	    flex-flow: row wrap;
     } 
+@media (min-width:900px){
+    /*----------Estilos para el encabezado de la pagina----------*/
+    header{
+        display: flex;
+    }
+    footer{
+        display: flex;
+    }
+    #menu{
+        text-align: right;
+    }
+    footer{
+        padding: 20px;
+    }
     #columna3 img{
         width: 40%;
         height: 10%;
         padding: 2px;
-    } #columna1,#columna2,#columna3,#columna4{
+    }
+    #columna1,#columna2,#columna3,#columna4{
         width: 25%;
     }
-    footer a{
-        text-decoration: none;
-        color: black;
+}
+@media (max-width:900px){
+    header{
+        text-align: center;
+        padding: 20px 40px;
+    }
+    header nav{
+        text-align: center;
+    }
+    footer{
+        padding: 20px 30px;;
+    }
+    footer p, footer label{
+        font-size: 20px;
+    }
+    #columna3 nav a{
+        display: flex;
+    }
+    #columna3 img{
+        width: 30%;
+        height: 40%;
+        padding: 2px;
     }
 }
