--- a/css/estilos1.css
+++ b/css/estilos1.css
@@ -13,72 +13,66 @@ header{
     background-color: #82c3a6;
 }
 #principal img{
-        width: 100%;
-    }
-    #secundario{
-        background-color: #d5c75f;
-    }
+    width: 100%;
+}
+#secundario{
+    background-color: #d5c75f;
+    border: 1px;
+}
 #secundario img{
-        width: 100%;
-    }
-    .imagen1 img,.imagen2 img{
-        border: 1px solid black;
-    }
-    #secundario p{
-        text-decoration: underline;
-        margin: 0px;
-        text-align: center;
-        color: black;
-        font-size: 20px;
-    }
-    #principal img,#secundario img{
-        box-shadow: 2px 2px 2px #02010a;}
-    
+    width: 100%;
+}
+.imagen1 img,.imagen2 img{
+    border: 2px solid black;
+}
+#secundario p{
+    text-decoration: underline;
+    margin: 0px;
+    text-align: center;
+    color: black;
+    font-size: 20px;
+}
+#principal img,#secundario img{
+    box-shadow: 2px 2px 0px black;
+}
+/*efecto de movimiento  giratorio para ambos lados, izquier y derecha para la imagen del bloque secundario (paisajes)*/
 @-webkit-keyframes movimiento{
     0%{
         transform: rotate(none);
+        box-shadow: 2px 2px 2px  #82c3a6;
     }
     33%{
-        transform: rotate(-2deg);
+        transform: rotate(-10deg);
+        box-shadow: 2px 2px 2px  #82c3a6;
     }
     66%{
-        transform: rotate(2deg);
+        transform: rotate(10deg);
+        box-shadow: 2px 2px 2px  #82c3a6;
     }
     100%{
         transform: rotate(none);
+        box-shadow: 2px 2px 2px  #82c3a6;
     }
 }
-@-webkit-keyframes  movimiento2{
+/*efecto de movimiento de traslacion del centro para la izquierda y arriba, luego se desplaza hacia la derecha y por ultimo baja a su ubicacion normal*/
+@-webkit-keyframes movimiento2{
     0%{
-        position: relative;
-        left: 2px;
-        bottom: 1px;
+        transform: translate(none);
+        box-shadow: 2px 2px 2px  #82c3a6;
     }
-    20%{
-        position: relative;
-        left: 4px;
-        bottom: 2px;
+    25%{
+        transform: translate(-20px,-5px);
+        box-shadow: 2px 2px 2px  #82c3a6;
     }
-    40%{
-        position: relative;
-        left: 6px;
-        bottom: 3px;
-    }
-    60%{
-        position: relative;
-        left: 4px;
-        bottom: 2px;
-    }
-    80%{
-        position: relative;
-        left: 2px;
-        bottom: 1px;
+    75%{
+        transform: translate(20px,-5px);
+        box-shadow: 2px 2px 2px  #82c3a6;
     }
     100%{
-        position: relative;
-        left: 0px;
-        bottom: 0px;
+        transform: translate(none);
+        box-shadow: 2px 2px 2px  #82c3a6;
     }
+    
 }
 header nav a:hover{
     text-decoration: overline;
@@ -92,7 +86,7 @@ header nav a:hover{
     animation-name: movimiento2;
     animation-duration: 1s;
 }
-
+/*media query para adaptacion a pantallas de 900px y mayores*/
 @media (min-width:900px){
     body{
         max-width: 900px;
@@ -108,6 +102,7 @@ header nav a:hover{
         padding: 20px 30px 20px 30px;
     }
 }
+/*media query para adaptacion a pantallas de 900px y menores*/
 @media (max-width:900px){
     body{
         width: 100%;
