--- a/css/cabezaPie.css
+++ b/css/cabezaPie.css
@@ -1,36 +1,56 @@
+/*---------estilos para el encabezado de la pagina---------*/
 header{
-        padding: 20px;
-    }
-    #menu{
-        margin-top: 30px;
-    }
-    #menu a{
-        font-size: 25px;
-        color: white;
-        margin: 0px 10px;
-    }
-    header h1, header nav{
-        width: 100%;
-    }
-    header h1{
-        text-shadow: 2px 2px 2px #02010a;
-    }
+    padding: 20px;
+    border-radius: 10px 10px 0 0 ;
+}
+#menu{
+    margin-top: 30px;
+}
+#menu a{
+    font-size: 25px;
+    color: white;
+    margin: 0px 10px;
+}
+header h1, header nav{
+    width: 100%;
+}
+header h1{
+    text-shadow: 2px 2px 2px #02010a;
+}
     
-    /*---------estilos para el pie de la pagina---------*/
-    footer{
-        color: black;
-        background-color: #C6d5c5;
-    }
-    footer a{
-        text-decoration: none;
-        color: black;
-    }
+/*---------estilos para el pie de la pagina---------*/
+footer{
+    color: black;
+    background-color: #C6d5c5;
+    border-radius: 0 0 10px 10px;
+}
+footer a{
+    text-decoration: none;
+    color: black;
+}
 #columna3 nav a{
         display: -webkit-flex;
 	    display: flex;
 	    -webkit-flex-flow: row wrap;
 	    flex-flow: row wrap;
-    } 
+    }
+/*efecto de animacion del encabezado y toda la pagina de rebote, viniendo de abajo hacia arriba*/
+@-webkit-keyframes animacionheader{
+    0%{
+        margin-top: 150%;
+    }
+    60%{
+        margin-top: -5%;
+    }
+    100{
+        margin-top: 0%;
+    }
+}
+header{
+    animation-name: animacionheader;
+    animation-duration: 1.5s;
+}
+/*media query para adaptacion a pantallas de 900px y mayores*/
 @media (min-width:900px){
     /*----------Estilos para el encabezado de la pagina----------*/
     header{
@@ -42,6 +62,7 @@ header{
     #menu{
         text-align: right;
     }
+    /*----------Estilos para el pie de la pagina----------*/
     footer{
         padding: 20px;
     }
@@ -54,7 +75,9 @@ header{
         width: 25%;
     }
 }
+/*media query para adaptacion a pantallas de 900px y menores*/
 @media (max-width:900px){
+    /*----------Estilos para el encabezado de la pagina----------*/
     header{
         text-align: center;
         padding: 20px 40px;
@@ -62,6 +85,7 @@ header{
     header nav{
         text-align: center;
     }
+    /*----------Estilos para el pie de la pagina----------*/
     footer{
         padding: 20px 30px;;
     }
