--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -2,51 +2,65 @@ body{
     font-family: 'Dancing Script', cursive;
     background-color: #02010a;
     color: white;
+    margin-left: auto;
+    margin-right: auto;
 }
 header{
     background-color: #5b7989;
 }
+#contenido{
+    background-color: #d5c75f;
+}
+#contenido img{
+    border: 1px solid black;
+    box-shadow: 2px 2px 2px #02010a;
+}
+#imagen1 img{
+    -webkit-filter: blur(10px);
+    filter: blur(10px);
+}
+#imagen2 img,#imagen4 img, #imagen6 img{
+    -webkit-filter: grayscale(100%);
+}
+#imagen3 img{
+    -webkit-filter: sepia(90%);
+}
+header nav a:hover{
+    text-decoration: overline;
+}
+/*media query para adaptacion a pantallas de 900px y mayores*/
 @media (min-width:900px){
     body{
         max-width: 900px;
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 900px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    #contenido{
-        background-color: #d5c75f;
     }
     .fila1{
         display: flex;
-        padding: 20px 0px 10px 0px;
     }
     .fila2{
         display: flex;
+    }
+    .fila1 img,.fila2 img{
+        width: 100%;
+    }
+    .fila1{
+        padding: 20px 0px 10px 0px;
+}
+    .fila2{
         padding: 10px 0px 20px 0px;
+    }
+    #imagen1,#imagen2,#imagen3,#imagen4,#imagen5,#imagen6{
+        padding: 0px 20px;
+    }
+}
+/*media query para adaptacion a pantallas de 900px y menores*/
+@media (max-width:900px){
+    body{
+        width: 100%;
     }
     .fila1 img,.fila2 img{
         width: 100%;
     }
     #imagen1,#imagen2,#imagen3,#imagen4,#imagen5,#imagen6{
-        padding: 0px 20px;
-    }
-    #contenido img{
-        border: 1px solid black;
-        box-shadow: 2px 2px 2px #02010a;
-    }
-    #imagen1 img{
-        -webkit-filter: blur(10px);
-        filter: blur(10px);
-    }
-    #imagen2 img,#imagen4 img, #imagen6 img{
-        -webkit-filter: grayscale(100%);
-    }
-    #imagen3 img{
-        -webkit-filter: sepia(90%);
-    }
-    header nav a:hover{
-        text-decoration: overline;
+        padding: 20px 30px;
     }
 }
